# signaltide_v3

./: .env.template  .gitignore  ARCHITECTURE.md  CURRENT_STATE.md  DATA_INTEGRITY_STATUS.md  DOCUMENTATION_MAP.md  Makefile  PHASE_1_SIGNAL_AUDIT_REPORT.md  PRODUCTION_READY.md  README.md  RED_TEAM_AUDIT_REPORT.md  config.py  mypy.ini  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
archive/: database_v2_complex.py
backtest/: __init__.py
core/: __init__.py  backtest_engine.py  base_signal.py  db.py  deflated_sharpe.py  execution.py  institutional_base.py  manifest.py  portfolio.py  schedules.py  signal_adapters.py  signal_registry.py  types.py  universe_manager.py  walk_forward.py
data/: README.md  __init__.py  data_manager.py  mock_generator.py
docs/: ANTI_OVERFITTING.md  ENSEMBLES.md  ENSEMBLES_M3.5_REGIME_ALLOC_SPEC.md  ENSEMBLES_M3.6_NOTES.md  ENSEMBLES_M3.6_THREE_SIGNAL_SPEC.md  ERROR_PREVENTION_ARCHITECTURE.md  INSIDER_PHASE1_SPEC.md  MOMENTUM_PHASE2_SPEC.md  NAMING_CONVENTIONS.md  OPTUNA_GUIDE.md  PHASE3_ENSEMBLE_STATUS.md  QUALITY_SPEC_SNAPSHOT_2025-11-23.md  SHARADAR_SCHEMA.md  SP500_RESEARCH_PLAN.md  TRANSACTION_COST_ANALYSIS.md  signal_catalog.md
optimization/: __init__.py  optuna_manager.py  parameter_space.py
scripts/: analyze_optimization.py  analyze_signal_characteristics.py  build_trading_calendar.py  check_insider_coverage.py  compare_momentum_trial11_vs_institutional.py  compare_rebalancing.py  diagnose_insider_phase1.py  diagnose_momentum_phase1.py  diagnose_momentum_phase2_shortlist.py  diagnose_quality_signal.py  optimize_signals.py  (+38 more)
(+131 files in other folders)
